--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "next": "12.1.6",
         "react": "18.1.0",
         "react-dom": "18.1.0",
+        "react-toastify": "^9.0.4",
         "yup": "^0.32.11"
     },
     "devDependencies": {
