--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.8.2",
+        "@types/redux-persist": "^4.3.1",
         "next": "12.1.6",
         "react": "18.1.0",
         "react-dom": "18.1.0",
+        "react-redux": "^8.0.2",
         "react-toastify": "^9.0.4",
+        "redux-persist": "^6.0.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
